Version 0.7.2
  - new functions
	
    * initial XBox 360 support
    * initial UPnP Search support
    * initial support for device specific settings
	
  - fixed bugs
	
    * fixed ip address detection
    * fixed crash if config is malformed
    * fixed urlencoded form value handling
    * send utf-8 encoding in http header (todo)
    * fixed compilation error
      (implemented detection of second iconv param)

Version 0.7.1 (2007-02-03)
  * fixed bug #1650930 (win32)
  * Mac OS X fixes
  ** correct handling of socket option SO_NOSIGPIPE
  ** fixed send() error handling

Version 0.7 (2007-02-01)
  * initial UPnP eventing
    referring to the "Intel DeviceValidator" the eventing mechanism
    is now UPnP 1.0 compliant
  * initial taglib support (optional)  
  * initial TwoLAME support (choose encoder at build or runtime)
  * initial libnotify support (./configure --enable-libnotify)
  
  * new ./configure option --enable-default-http-port=PORT  

  * fixed FLAC transcoding on 64 bit machines
    (patch from Qball Cow. Big thanks!)
  * fixed crash on 64 bit machines caused by an
    unhandled out of range exception (Thanks again Qball)
  
  * syslog support (unix)
  ** daemon mode will allways use syslog
  ** use the parameter --syslog for the command line mode
  
  * fixed daemon mode (unix)
  ** config file is now checked before forking

  * code cleanup
  * new, easy to extend file extension to mime type mapping
    take a look at "src/ContentDirectory/FileDetails.cpp"    
  
  * fixed TTL (time to live) for SSDP alive messages
  * (win32 build) now correctly linked against libws2_32 instead of libwinsock2

  * webinterface: handling of urlencoded form values

  * fixed non blocking readline (mac os x)
  * fixed pthread_cancel (mac os x)

Version 0.5.4 (2006-11-23)
  * initial support for playlists (m3u, pls)
    new configuration option: "playlist representation"
  ** "file": playlists are send as playlist files